--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	
-	<head>
-		<meta charset="UTF-8">
-		<title>ETECIA Nutrição</title>
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/index.css">
-	</head>
-	
+
+<head>
+	<meta charset="UTF-8">
+	<title>ETECIA Nutrição</title>
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+</head>
+
 <body>
-	
+
 	<header>
 		<div class="container">
-			<h1 id="titulo"> ETECIA Nutrição</h1>
+			<h1 id="titulo">
+				ETEC Nutrição
+			</h1>
 		</div>
 	</header>
 	<main>
@@ -32,7 +34,7 @@
 				<tbody id="tabela-pacientes">
 					<tr class="paciente">
 						<td class="info-nome">Paulo</td>
-						<td class="info-peso">100</td>
+						<td class="info-peso">-100</td>
 						<td class="info-altura">2.00</td>
 						<td class="info-gordura">10</td>
 						<td class="info-imc">0</td>
@@ -41,7 +43,7 @@
 					<tr class="paciente">
 						<td class="info-nome">João</td>
 						<td class="info-peso">80</td>
-						<td class="info-altura">1.72</td>
+						<td class="info-altura">-1.72</td>
 						<td class="info-gordura">40</td>
 						<td class="info-imc">0</td>
 					</tr>
@@ -70,10 +72,34 @@
 					</tr>
 				</tbody>
 			</table>
-			
+			<br>
 		</section>
-	</main>
-	
-</body>
+		<section class='container'>
+			<marquee id="troca2">Cadastrar Paciente</marquee>
+			<form id="form-paciente">
+				<div class="grupo">
+					<label for="nome">Nome</label>
+					<input type="text" id="nome" name="nome" placeholder="Digite o nome do paciente" class="campo">
+				</div>
+				<div class="grupo">
+					<label for="peso">Peso</label>
+					<input type="text" id="peso" name="peso" placeholder="Digite o peso do paciente" class="campo">
+				</div>
+				<div class="grupo">
+					<label for="altura">Altura</label>
+					<input type="text" id="altura" name="altura" placeholder="Digite a altura do paciente" class="campo">
+					</div>
+					<div class="grupo">
+						<label for="gordura">Gordura</label>
+						<input type="text" id="gordura" name="gordura" placeholder="Digite a porcentagem de gordura do paciente" class="campo">
+					</div>
+					<button id="botao-cadastrar">Cadastrar</button>
+				</form>
+				
+			</section>
+		</main>
+		
+	</body>
 <script src="js/main.js"></script>
+
 </html>
